--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,26 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のerrorが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+
+<h1>Editing Book</h1>
+<%= form_with model: @book,url:book_path(@book.id),method: :patch do |f| %>
+
+<h4>Title</h4>
+<%=f.text_field :title %>
+
+<h4>Body</h4>
+<%=f.text_field :body %>
+
+<%= f.submit 'Create Book' %>
+
+<% end %>
+
+<a><%= link_to "Show",book_path(@book.id)%></a>
+<a>|</a>
+<a><%= link_to "Back",:back %></a>
