--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,16 @@
 
-
+<p>
 <strong>Title:</strong>
-<p><%= @book.title %></p>
+<%= @book.title %>
+</p>
 
-
+<p>
 <strong>Body:</strong>
-<p><%= @book.body %></p>
+<%= @book.body %>
+</p>
 
 
 
-<a><%= link_to "Edit",edit_book_path(@book.id)%></a>
-<a>|</a>
-<a><%= link_to "Back",:back %></a>
+<%= link_to "Edit",edit_book_path(@book.id)%>
+|
+<%= link_to "Back",books_path %>
