--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,8 @@
  <p id="notice"></p>
  <h1>Books</h1>
 
- <table>
+ <body>
+     <table>
    <thead>
      <tr>
        <th>Title</th>
@@ -18,7 +19,7 @@
 　　  <td><%= book.body %></td>
 　　  <td><%= link_to "show",book_path(book.id)%></td>
 　　  <td><%= link_to "edit",edit_book_path(book.id)%></td>
-　　  <td><%= link_to "destory",book_path(book.id),method: :delete,"data-confirm"=>"Do you sure?"%></td>
+　　  <td><%= link_to "Destroy",book_path(book.id),method: :delete,"data-confirm"=>"Do you sure?"%></td>
 　　 </tr>
     <% end %>
 
@@ -38,16 +39,23 @@
 
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
 
-<h4>Title</h4>
-<%=f.text_field :title %>
+<div class = "field">
+    <%= f.label :title %>
+    <br />
+    <%= f.text_field :title %>
+</div>
 
-<h4>Body</h4>
-<%=f.text_area :body %>
+<div class = "field">
+    <%= f.label :body %>
+    <br />
+    <%= f.text_area :body %>
+</div>
 
 <%= f.submit 'Create Book' %>
 
 <% end %>
 
+ </body>
 
 
 
